# testgtest

./: CMakeLists.txt  README.md  build.bat  build.sh
FtTest/: test_add_test.cpp
googletest/lib/cmake/GTest/: GTestConfigVersion.cmake
googletest/lib/pkgconfig/: gmock.pc  gmock_main.pc  gtest.pc  gtest_main.pc
include/: test.h
source/: main.cpp  test.cpp
